# datinator

./: README.md
Datinator/: CMakeLists.txt  FEATURES.txt  HOWTO_BUILD.txt  README.txt  build_sqlite.cmd  generate.cmd
Datinator/plugins/: CMakeLists.txt  datinator_types.h  idata_container.h  idata_container_reader.h  idata_container_writer.h  plugin_dll_api.h  plugin_info.cpp  plugin_info.h  plugin_manager.cpp  plugin_manager.h  plugins_dll_api.h
Datinator/plugins/csv/: CMakeLists.txt  csv_container.cpp  csv_container.h  csv_dll_api.h  csv_global.h  csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h  dll_main.cpp
Datinator/plugins/csv/gui/: CMakeLists.txt
Datinator/plugins/csv/gui/reader/: CMakeLists.txt  csv_reader_config_panel.cpp  csv_reader_config_panel_gui.moc  csv_reader_config_panel_gui.ui
Datinator/plugins/csv/gui/writer/: CMakeLists.txt  csv_writer_config_panel.cpp  csv_writer_config_panel_gui.moc  csv_writer_config_panel_gui.ui
Datinator/plugins/oracle/: CMakeLists.txt  dll_main.cpp  oracle_container.cpp  oracle_container.h  oracle_dll_api.h  oracle_global.h  oracle_reader.cpp  oracle_reader.h  oracle_writer.cpp  oracle_writer.h
Datinator/plugins/oracle/gui/: CMakeLists.txt  oracle_writer_gui.moc  oracle_writer_gui.ui  oracle_writer_panel.cpp
Datinator/plugins/plugin/: CMakeLists.txt  dll_main.cpp  plugin.h  plugin_dll_api.h  plugin_info.cpp  plugin_info.h  plugin_manager.cpp  plugin_manager.h
Datinator/plugins/plugin/container/: CMakeLists.txt  container_base.cpp  container_base.h  reader_base.cpp  reader_base.h  writer_base.cpp  writer_base.h
Datinator/plugins/plugin/gui/: CMakeLists.txt  datatype_string.cpp  datatype_string.h  progress.cpp  progress.h
Datinator/plugins/plugin/sql/: CMakeLists.txt
Datinator/plugins/sqlite/: CMakeLists.txt  dll_main.cpp  sqlite_container.cpp  sqlite_container.h  sqlite_dll_api.h  sqlite_global.h  sqlite_reader.cpp  sqlite_reader.h  sqlite_writer.cpp  sqlite_writer.h
Datinator/plugins/sqlite/gui/: CMakeLists.txt  sqlite_writer_gui.moc  sqlite_writer_gui.ui  sqlite_writer_panel.cpp
Datinator/src/: CMakeLists.txt  application.h  main.cpp  resource.rc  test_main.cpp
Datinator/src/gui/: CMakeLists.txt  dbcolumn_observer.cpp  dbcolumn_observer.h
Datinator/src/gui/column_editor/: CMakeLists.txt  column_editor_dlg.cpp  column_editor_dlg_gui.moc  column_editor_dlg_gui.ui  column_editor_model.cpp  column_editor_model.h
Datinator/src/gui/main_frame/: CMakeLists.txt  config_listener.cpp  config_listener.h  main_frame.cpp  main_frame_gui.moc  main_frame_gui.ui  main_window.cpp  main_window_gui.moc  main_window_gui.ui  most_recent.cpp  most_recent.h  most_recent_qt.moc  reader_listener.cpp  reader_listener.h  writer_listener.cpp  writer_listener.h
Datinator/src/gui/mapping/: CMakeLists.txt  column_mapping_button.cpp  column_mapping_button_qt.moc  column_mapping_combobox.cpp  column_mapping_combobox.h  column_mapping_delegate.cpp  column_mapping_delegate.h  column_mapping_item.cpp  column_mapping_item.h  column_mapping_model.cpp  column_mapping_model.h  column_mapping_view.cpp  column_mapping_view_qt.moc
Datinator/src/manipulator/: CMakeLists.txt  imanipulator.h  manipulator.cpp  manipulator.h  manipulator_panel.cpp  manipulator_panel_qt.moc
Datinator/src/manipulator/autonumber/: CMakeLists.txt  autonumber.cpp  autonumber.h  autonumber_panel.cpp  autonumber_panel_gui.moc  autonumber_panel_gui.ui
Datinator/src/manipulator/column/: CMakeLists.txt  column.cpp  column.h  column_panel.cpp  column_panel_gui.moc  column_panel_gui.ui
Datinator/src/manipulator/date/: CMakeLists.txt  date.cpp  date.h  date_panel.cpp  date_panel_gui.moc  date_panel_gui.ui
Datinator/src/manipulator/editor/: CMakeLists.txt  manipulator_editor_dlg.cpp  manipulator_editor_dlg_gui.moc  manipulator_editor_dlg_gui.ui
Datinator/src/manipulator/null/: CMakeLists.txt  null.cpp  null.h
Datinator/src/manipulator/text/: CMakeLists.txt  selection.h  text.cpp  text.h  text_panel.cpp  text_panel_gui.moc  text_panel_gui.ui
support_lib/: CMakeLists.txt  README.txt  generate.cmd
support_lib/cmake/: generate_qt_sources.cmake
support_lib/include/support_qt/logging/: logging_dialog_box_gui.h
support_lib/support/: CMakeLists.txt  config.h.in  dll_main.cpp  support_defs.h  support_dll_api.h  supportlib_namespace.h
support_lib/support/db/: CMakeLists.txt  column_types.h  database_login.cpp  database_login.h  dbcolumn.h  type_helper.cpp  type_helper.h
support_lib/support/db/csv/: CMakeLists.txt  csv.cpp  csv.h
support_lib/support/helper/: CMakeLists.txt  hexdump.cpp  hexdump.h  string.cpp  string.h
support_lib/support/images/: CMakeLists.txt  btn_add.cpp  btn_delete.cpp  btn_down.cpp  btn_up.cpp
support_lib/support/logging/: CMakeLists.txt  logging.cpp  logging.h
support_lib/support/patterns/: CMakeLists.txt  event.h  observer.h  serialize.h
support_lib/support/unicode/: CMakeLists.txt  unicode_types.h
support_lib/support_qt/: CMakeLists.txt  dll_main.cpp  support_qt_dll_api.h  supportlib_qt_namespace.h
support_lib/support_qt/db/: CMakeLists.txt
support_lib/support_qt/db/login_panel/: CMakeLists.txt  database_login_panel.cpp  database_login_panel_gui.moc  database_login_panel_gui.ui  login_event.cpp  login_event.h  login_panel_model.cpp  login_panel_model.h
support_lib/support_qt/file/: CMakeLists.txt
support_lib/support_qt/file/path_panel/: CMakeLists.txt  path_panel.cpp  path_panel_gui.moc  path_panel_gui.ui
support_lib/support_qt/helper/: CMakeLists.txt  gui_helper.cpp  gui_helper.h  signal_blocker.h
support_lib/support_qt/logging/: CMakeLists.txt  logging.cpp  logging.h  logging_dialog_box.cpp  logging_dialog_box_gui.moc  logging_dialog_box_gui.ui  logging_item_model.cpp  logging_item_model.h
support_lib/support_qt/models/: CMakeLists.txt  default_item_model.h  table_item_model.h
support_lib/support_qt/models/delegates/: CMakeLists.txt  datatype_combobox.cpp  datatype_combobox.h
support_lib/support_qt/window/: CMakeLists.txt  restorable_window.cpp  restorable_window.h
(+38 files in other folders)
